Increase ipv6 Add command whitelist Fix IP whitelist

--- a/remote_command.conf
+++ b/remote_command.conf
@@ -2,6 +2,8 @@ global {
     IP=0.0.0.0;
     PORT=127;                       // 服务器端口
     COMMAND_OUT_FILE=command.log;   // 命令输出文件覆盖上一个命令输出
-    IP_RESTRICTION = 1;             // 非1不开启白名单
-    IP_SEGMENT= 127.0.0.1 ;         // 允许的IP地址，空格隔开
+    IP_RESTRICTION = 1;             // 非1不开启IP白名单
+    IP_SEGMENT = "127.0.0.1 0000:0000:0000:0000:0000:0000:0000:127.0.0.1 ::1";         // 允许的IP地址，空格隔开
+    COMMAND_RESTRICTION = 1;        // 非1不开启命令白名单
+    DISABLE_COMMAND = "rm mv passwd sudo reboot shutdown poweroff halt init";      // 不允许的命令，空格隔开
 }
